# bevy_nix_vscode_template

./: Cargo.toml  flake.nix
.cargo/: config  config.toml
src/: main.rs
