[package]
name = "bevy_nix_vscode_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.15.3", features = [] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
